--- a/timerstyles.css
+++ b/timerstyles.css
@@ -6,14 +6,15 @@ body {
     justify-content: center;
     height: 100vh;
     margin: 0;
-    background-color: #f4f4f4;
+    background-color:darkgreen;
+    color: white;
 }
 
 h1 {
     margin-bottom: 20px;
 }
 
-#stopwatch {
+#display {
     font-size: 48px;
     margin-bottom: 20px;
 }
@@ -23,35 +24,53 @@ button {
     font-size: 16px;
     margin: 5px;
     border: none;
-    border-radius: 5px;
+    border-radius: 10px;
     cursor: pointer;
-    transition: background-color 0.3s;
+    transition: background-color 0.3s; transform: 0.3s;
 }
 
 button:hover {
     background-color: #ddd;
+    transform: scale(1.05);
 }
 
-#lap-times {
-    margin-top: 20px;
+.lapTableContainer {
+    max-height: 250px;
+    overflow-y:auto;
+    margin-bottom: 20px;
     width: 100%;
     max-width: 400px;
 }
 
-.lap-time {
-    display: flex;
-    justify-content: space-between;
-    padding: 5px;
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+thead th {
+    position: sticky;
+    text-align: left;
+    z-index: 1;
+    top: 0;
+    background-color:darkseagreen 
+}
+
+th, td {
+    padding: 10px;
+    text-align: left;
+}
+
+.lap-time tr {
     border-bottom: 1px solid #ccc;
 }
 
-.best-lap {
+.bestLap {
     font-weight: bold;
     color: green;
 }
 
 @media (max-width: 600px) {
-    #stopwatch {
+    #display {
         font-size: 36px;
     }
 
