--- a/timerstyles.css
+++ b/timerstyles.css
@@ -4,8 +4,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: top;
-    height: 100vh;
-    background-color:rgb(3, 81, 3);
+    height: 90vh;
+    background-color: rgb(0, 61, 0);
     color: white;
 }
 
@@ -13,25 +13,41 @@ h1 {
     margin-bottom: 20px;
 }
 
+.stopwatch-container {
+    border-style: none;
+    border-radius: 15px;
+    background-color: rgb(51, 140, 51);
+    /* padding: 10px; */
+}
+
+
+
 #display {
     font-size: 48px;
     margin-bottom: 20px;
 }
 
-.startBtn, .pauseBtn, .lapBtn, .resetBtn {
+.startBtn,
+.pauseBtn,
+.lapBtn,
+.resetBtn {
     padding: 10px 20px;
     font-size: 16px;
     margin-left: 5px;
-    margin-right: 2.5px;
+    margin-right: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     border: none;
     border-radius: 10px;
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.5);
     cursor: pointer;
 }
 
-.pauseBtn:disabled, .lapBtn:disabled {
+.pauseBtn:disabled,
+.lapBtn:disabled {
     background-color: darkgrey;
     cursor: not-allowed;
-} 
+}
 
 button:hover {
     transform: scale(1.05);
@@ -39,43 +55,54 @@ button:hover {
 
 .startBtn {
     background-color: greenyellow;
-    transition: background-color 0.3s; transform: 0.3s;
+    transition: background-color 0.3s;
+    transform: 0.3s;
 }
+
 .startBtn:hover {
     background-color: lawngreen;
 }
 
 .resetBtn {
     background-color: indianred;
-    transition: background-color 0.3s; transform: 0.3s;
+    transition: background-color 0.3s;
+    transform: 0.3s;
 }
+
 .resetBtn:hover {
     background-color: red;
 }
 
 .pauseBtn:enabled {
     background-color: gold;
-    transition: background-color 0.3s; transform: 0.3s;
+    transition: background-color 0.3s;
+    transform: 0.3s;
 }
+
 .pauseBtn:enabled:hover {
-    background-color: orange; 
+    background-color: orange;
 }
 
 .lapBtn:enabled {
     background-color: deepskyblue;
-    transition: background-color 0.3s; transform: 0.3s;
+    transition: background-color 0.3s;
+    transform: 0.3s;
 }
+
 .lapBtn:enabled:hover {
     background-color: dodgerblue;
 }
 
 .lapTableContainer {
+    height: 250px;
     max-height: 250px;
-    overflow-y:auto;
+    overflow-y: auto;
     margin-bottom: 20px;
-    width: 100%;
+    width: 400px;
     max-width: 400px;
     border-radius: 10px;
+    background-color: rgb(87, 136, 87);
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
 table {
@@ -88,16 +115,18 @@ thead th {
     text-align: left;
     z-index: 1;
     top: 0;
-    background-color:rgb(111, 184, 111) 
+    background-color: rgb(72, 112, 72);
+    border-bottom: 1px solid #ccc;
 }
 
-th, td {
+th,
+td {
     padding: 10px;
     text-align: left;
 }
 
 td {
-    background-color: rgb(99, 156, 0);
+    background-color: rgb(87, 136, 87);
 }
 
 .lap-time tr {
@@ -109,13 +138,34 @@ td {
     color: green;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 650px) {
+    .stopwatchapp {
+        margin-top: 20px;
+    }
+
     #display {
         font-size: 36px;
     }
 
     button {
-        width: 100%;
+        width: 40%;
+        max-width: 40%;
         font-size: 14px;
+    }
+
+    .lapTableContainer {
+        max-height: 200px;
+    }
+}
+
+@media(min-width: 1001px) {
+    center h1 {
+        font-size: 50px;
+        margin-bottom: 20px;
+    }
+
+    #display {
+        font-size: 60px;
+        margin-bottom: 20px;
     }
 }
